# auto-doc-example

./: .gitignore  CMakeLists.txt  Makefile  README.md  library.cpp  library.h
docs/: Doxyfile  build_docs.sh  conf.py  index.rst  page2.rst
